[project]
name = "sv-mcp"
version = "1.0"
description = "Service Virtualization MCP"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "httpx[http2]>=0.28.1",
    "mcp[cli]>=1.13.0",
    "pyinstaller>=6.0.0",
    "pydantic>=2.11.7",
    "pydantic-core>=2.33.2",
    "pydantic-settings>=2.10.1",
]

[project.scripts]
sv-mcp = "main:run"
[tool.setuptools]
packages = { find = { where = ["sv_mcp"] } }
